foyer is about a third slower than the other two impls